--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <title>HelloRemote</title>
-    </head> 
-    <body></body>
+    </head>  
+    <body>adfsfsdf</body>
 </html>
